# local-ai-training

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROJECTION_FINDINGS.md  README.md  pyproject.toml
configs/: assistant_scale_1b_5k.toml  bitnet_inference.toml  enwik8_25m.toml  enwik8_subword_25m_30k.toml  enwik8_subword_25m_5k.toml  int8_convergence_25m_bf16.toml  int8_convergence_25m_int8.toml  iso_fp32_2m.toml  iso_fp32_8m.toml  iso_mem_c11_7mb.toml  iso_mem_c13_7mb.toml  iso_mem_c15_7mb.toml  iso_mem_nonary_7mb.toml  iso_mem_quinary_7mb.toml  iso_mem_septenary_7mb.toml  iso_mem_ternary_7mb.toml  iso_nonary_100m.toml  iso_quinary_113m.toml  iso_septenary_105m.toml  ratchet_tiny.toml  ratchet_tiny_trainable_scale.toml  repro_check_quinary.toml  rtx3090_optimized_1b_5k.toml  rtx3090_optimized_25m.toml  scaleup_25m.toml  scaleup_text8_25m.toml  scaleup_text8_25m_30k.toml  scaleup_text8_25m_5k.toml  scaleup_text8_4096_5k.toml  smoke.toml
docs/: HANDOFF-assistant-scale-1b.md  HANDOFF-direction2-activation-memory.md  HANDOFF-int8-convergence.md  HANDOFF-packed-training-memory.md  README.md  ROADMAP.md
scripts/: __init__.py  bitnet_eval.py  compare_5k.py  int8_3072_observability_probe.py  int8_convergence_preflight.py  int8_step_profile.py  int8_training_throughput.py  memory_decomposition.py  memory_probe.py  memory_sweep.py  profile_int8.py  projection_oracle.py  test_int8_backward.py  test_int8_fused.py  test_int_mm.py  test_w8a16_gemm.py  time_gemm.py  time_int8_kernels.py
tests/: test_bitnet_eval.py  test_cli.py  test_data.py  test_experiment.py  test_generate.py  (+11 more)
(+94 files in other folders)
