[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-training"
version = "0.1.0"
description = "Inspectable experiments for master-weight-free local AI training"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
  "datasets>=3.2,<5",
  "matplotlib>=3.9,<4",
  "safetensors>=0.4.5,<1",
  "torch>=2.5,<3",
  "torchao>=0.17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
lat = "local_ai_training.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

